--- a/index.html
+++ b/index.html
@@ -10002,18 +10002,20 @@
                 }
 
                 #finalNaviNumbers {
-                    gap: 5px !important;
+                    gap: 3px !important;
                     margin-bottom: 14px !important;
+                    flex-wrap: nowrap !important;
+                    justify-content: center !important;
                 }
 
-                /* Lotto balls inside the final card — must be circular */
+                /* Lotto balls inside the final card — must be circular, 6 in one row */
                 #finalNaviNumbers .result-ball,
                 #finalNaviNumbers>div {
-                    width: 40px !important;
-                    height: 40px !important;
-                    min-width: 40px !important;
-                    min-height: 40px !important;
-                    font-size: 14px !important;
+                    width: 34px !important;
+                    height: 34px !important;
+                    min-width: 34px !important;
+                    min-height: 34px !important;
+                    font-size: 12px !important;
                     border-radius: 50% !important;
                     flex-shrink: 0 !important;
                 }
