UI: update index navi mode btn text to 로또 Navi by AI

--- a/index.html
+++ b/index.html
@@ -2600,7 +2600,7 @@
             <!-- 로또 Navi 시작 버튼 (사용자 요청 위치) -->
             <button id="naviModeBtn" onclick="toggleNaviMode()"
                 style="width: 100%; margin: 10px 0 20px 0; padding: 12px; background: linear-gradient(135deg, #1976d2, #1565c0); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-                🧭 로또 Navi by KINOV AI <span
+                🧭 로또 Navi by AI <span
                     style="background:rgba(255,255,255,0.2); padding: 2px 6px; border-radius: 10px; font-size: 10px;">beta</span>
             </button>
 
@@ -9891,7 +9891,17 @@
                     margin-top: 5px !important;
                 }
 
-                /* Step 6: AI Matrix is the HIGHLIGHT — maximize its space */
+                /* ===== Main Navi Button: 70% width, big text ===== */
+                #naviModeBtn {
+                    width: 70% !important;
+                    margin: 10px auto 20px auto !important;
+                    font-size: 18px !important;
+                    padding: 14px 10px !important;
+                    border-radius: 14px !important;
+                    letter-spacing: 0.5px !important;
+                }
+
+                /* ===== Step 6: AI Matrix is the HIGHLIGHT — maximize its space ===== */
                 #naviStep6 h2 {
                     font-size: 14.04px !important;
                     margin-top: 5px !important;
