UI: hide beta pill on mobile and reduce navi mode btn font to 16.2px

--- a/index.html
+++ b/index.html
@@ -9895,10 +9895,15 @@
                 #naviModeBtn {
                     width: 70% !important;
                     margin: 10px auto 20px auto !important;
-                    font-size: 18px !important;
+                    font-size: 16.2px !important;
                     padding: 14px 10px !important;
                     border-radius: 14px !important;
                     letter-spacing: 0.5px !important;
+                }
+
+                #naviModeBtn span {
+                    display: none !important;
+                    /* Hide 'beta' tag on mobile */
                 }
 
                 /* ===== Step 6: AI Matrix is the HIGHLIGHT — maximize its space ===== */
