UI: PC navi btn enlarge text and remove beta, Mobile navi btn 84% width and left align

--- a/index.html
+++ b/index.html
@@ -2599,9 +2599,8 @@
 
             <!-- 로또 Navi 시작 버튼 (사용자 요청 위치) -->
             <button id="naviModeBtn" onclick="toggleNaviMode()"
-                style="width: 100%; margin: 10px 0 20px 0; padding: 12px; background: linear-gradient(135deg, #1976d2, #1565c0); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-                🧭 로또 Navi by AI <span
-                    style="background:rgba(255,255,255,0.2); padding: 2px 6px; border-radius: 10px; font-size: 10px;">beta</span>
+                style="width: 100%; margin: 10px 0 20px 0; padding: 12px; font-size: 19.2px; background: linear-gradient(135deg, #1976d2, #1565c0); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                🧭 로또 Navi by AI
             </button>
 
             <div class="section">
@@ -9891,19 +9890,14 @@
                     margin-top: 5px !important;
                 }
 
-                /* ===== Main Navi Button: 70% width, big text ===== */
+                /* ===== Main Navi Button: 84% width (1.2x of 70%), left aligned ===== */
                 #naviModeBtn {
-                    width: 70% !important;
-                    margin: 10px auto 20px auto !important;
+                    width: 84% !important;
+                    margin: 10px 0 20px 0 !important;
                     font-size: 16.2px !important;
                     padding: 14px 10px !important;
                     border-radius: 14px !important;
                     letter-spacing: 0.5px !important;
-                }
-
-                #naviModeBtn span {
-                    display: none !important;
-                    /* Hide 'beta' tag on mobile */
                 }
 
                 /* ===== Step 6: AI Matrix is the HIGHLIGHT — maximize its space ===== */
