UI: update description text and font size for KINOV AI Navi setting

--- a/index.html
+++ b/index.html
@@ -2813,7 +2813,9 @@
                                 <div class="selection-icon">⚡</div>
                                 <div class="selection-info">
                                     <span class="selection-title">당신의 직관 x KINOV Ai</span>
-                                    <span class="selection-desc">당신이 고른 번호, Ai가 역대 패턴으로 당첨 확률을 검증합니다.</span>
+                                    <span class="selection-desc"
+                                        style="font-size: 10.8px; line-height: 1.35; margin-top: 4px;">당신이 고른 번호,<br>Ai가
+                                        역대 1200회 당첨번호<br>패턴분석으로 당첨 확률을 검증합니다.</span>
                                 </div>
                             </div>
 
