--- a/index.html
+++ b/index.html
@@ -6541,6 +6541,14 @@
 
             async function toggleNaviMode(fromAdModal = false) {
                 naviOpenedFromAdModal = fromAdModal; // Store entry point
+
+                // --- Close Background Popups (InfoWindows & Toasts) ---
+                if (typeof closeAllToasts === 'function') closeAllToasts();
+                if (typeof currentInfoWindow !== 'undefined' && currentInfoWindow) {
+                    currentInfoWindow.close();
+                    document.body.classList.remove('iw-open');
+                }
+
                 if (!naviEngine) {
                     try {
                         // Resilient Data Source: use main map data if available
