--- a/index.html
+++ b/index.html
@@ -5951,7 +5951,9 @@
                     </div>
                 </div>
 
-                <div id="naviStepContainer"> <!-- Premium Header & Counter -->
+                <div id="naviStepContainer"
+                    style="display: flex; flex-direction: column; flex: 1; min-height: 0; overflow: hidden;">
+                    <!-- Premium Header & Counter -->
                     <div style="background: #f8f9fa; padding: 16px; border-bottom: 1px solid #eee; text-align: center;">
                         <div style="font-size: 11.25px; color: #1976d2; margin-bottom: 4px; font-weight: bold;">현재 분석 중인
                             조합 수</div>
