style: reduce height of combination counter header container

--- a/index.html
+++ b/index.html
@@ -5954,12 +5954,13 @@
                 <div id="naviStepContainer"
                     style="display: flex; flex-direction: column; flex: 1; min-height: 0; overflow: hidden;">
                     <!-- Premium Header & Counter -->
-                    <div style="background: #f8f9fa; padding: 16px; border-bottom: 1px solid #eee; text-align: center;">
-                        <div style="font-size: 11.25px; color: #1976d2; margin-bottom: 4px; font-weight: bold;">현재 분석 중인
+                    <div
+                        style="background: #f8f9fa; padding: 8px 16px; border-bottom: 1px solid #eee; text-align: center;">
+                        <div style="font-size: 11.25px; color: #1976d2; margin-bottom: 2px; font-weight: bold;">현재 분석 중인
                             조합 수</div>
                         <div id="naviComboCounter" class="combination-counter">8,145,060</div>
                         <div
-                            style="width: 100%; height: 4px; background: #eee; margin-top: 12px; border-radius: 2px; overflow: hidden;">
+                            style="width: 100%; height: 4px; background: #eee; margin-top: 6px; border-radius: 2px; overflow: hidden;">
                             <div id="naviProgress"
                                 style="width: 16.6%; height: 100%; background: var(--secondary); transition: width 0.3s;">
                             </div>
