feat(step2): update info box text to explain AI reason

--- a/index.html
+++ b/index.html
@@ -6020,7 +6020,8 @@
 
                             <div class="capsule-info-box">
                                 <span style="font-weight:bold; color:#ffd700;">KINOV AI 추천숫자 :</span><br>
-                                AI가 추천하는 [미출현 숫자]에서 엄선한 3개의 번호
+                                5주 이상 미출현 번호 중 누적 당첨 빈도와<br>
+                                최근 패턴 가중치가 가장 높은 상위 3수
                             </div>
                         </div>
 
