feat(step2): show info box on mobile view with responsive styling

--- a/index.html
+++ b/index.html
@@ -9774,8 +9774,12 @@
                 }
 
                 .capsule-info-box {
-                    display: none !important;
-                    /* Removed in mobile as per request */
+                    display: block !important;
+                    margin: 10px 15px 0 15px !important;
+                    padding: 12px 10px !important;
+                    font-size: 11px !important;
+                    white-space: normal !important;
+                    line-height: 1.4 !important;
                 }
 
                 .highest-label {
