--- a/index.html
+++ b/index.html
@@ -6034,7 +6034,8 @@
                                 확률의 균형을 설계하라.
                             </div>
 
-                            <div class="balance-container">
+                            <!-- Top Section (Input): Balance Slider -->
+                            <div class="balance-container" style="position: relative; z-index: 2;">
                                 <div
                                     style="display: flex; justify-content: space-between; font-weight: bold; font-size: 18px;">
                                     <span style="color: #ef4444; text-shadow: 0 0 10px #ef4444;">ODD (홀수)</span>
@@ -6043,24 +6044,32 @@
                                 </div>
 
                                 <input type="range" id="balanceSlider" min="0" max="6" value="2" class="neon-slider"
-                                    style="margin-top: 12px;" oninput="updateStep3UI(this.value)">
+                                    style="margin-top: 12px; position:relative; z-index:2;"
+                                    oninput="updateStep3UI(this.value)">
                                 <!-- 손가락 포인터 (슬라이더 연동) -->
                                 <div id="fingerPointerWrapStep3"
-                                    style="position:relative; height:35px; width:100%; margin-top:-4px;">
+                                    style="position:relative; height:35px; width:100%; margin-top:-4px; z-index:2;">
                                     <span id="fingerPointerStep3"
                                         style="font-size:40px; line-height:1; transition:transform 0.3s cubic-bezier(0.23,1,0.32,1); position:absolute; top:0; left:0%; transform:translateX(calc(33.3% - 20px)); pointer-events:none;">👆</span>
                                 </div>
                             </div>
 
+                            <!-- Middle Section: Energy Beam Connection -->
+                            <div class="energy-beam-container">
+                                <div class="energy-beam" id="step3EnergyBeam"></div>
+                            </div>
+
+                            <!-- Bottom Section (Processing & Output): Golden Zone & Aura Spheres -->
                             <div class="step3-ai-result-panel"
-                                style="width: 82%; padding: 0px 12px 10px 12px; margin: 48px auto 5px auto; min-height: auto; justify-content: flex-start;">
+                                style="position: relative; z-index: 2; width: 82%; padding: 15px 12px 10px 12px; margin: 0 auto; min-height: auto; justify-content: flex-start;">
 
-
-                                <div class="golden-zone-container" style="width: 100%; margin-bottom: 5px;">
+                                <div class="golden-zone-container"
+                                    style="width: 100%; margin-bottom: 5px; position:relative;">
                                     <div class="gauge-label" style="font-size: 11px; margin-bottom: 2px;">
-                                        <span>MIN (21)</span>
-                                        <span style="color: #fbbf24; font-weight: 900;">GOLDEN-ZONE (100~170)</span>
-                                        <span>MAX (255)</span>
+                                        <span>MIN(21)</span>
+                                        <span style="color: #fbbf24; font-weight: 900; letter-spacing:1px;">GOLDEN-ZONE
+                                            (100~170)</span>
+                                        <span>MAX(255)</span>
                                     </div>
                                     <div class="gauge-bg" style="height: 16px; border-radius: 8px;">
                                         <div class="gauge-golden-zone"></div>
@@ -6069,21 +6078,25 @@
                                         </div>
                                     </div>
                                     <div id="gaugeSumValue"
-                                        style="margin-top: 2px; margin-bottom: 12px; font-size: 11px; font-weight: 900; color: #60a5fa; line-height: 1;">
+                                        style="margin-top: 5px; margin-bottom: 5px; font-size: 13px; font-weight: 900; color: #60a5fa; line-height: 1;">
                                         ...</div>
+
+                                    <!-- Golden Zone Hit Indicator -->
+                                    <div id="goldenZoneHitText" class="golden-zone-hit-text">
+                                        GOLDEN ZONE HIT
+                                    </div>
                                 </div>
 
                                 <div class="rotating-balls-container" id="step3BallsNew"
-                                    style="min-height: 40px; margin: 8px 0; display: flex !important; visibility: visible !important;">
-                                    <!-- AI Rotating Balls -->
+                                    style="min-height: 80px; margin: 15px 0 8px 0; display: flex !important; visibility: visible !important;">
+                                    <!-- Premium Aura Spheres rendered here -->
                                 </div>
                                 <!-- 손가락 포인터 (공 선택시 이동) -->
                                 <div id="fingerPointerWrapStep3Balls"
-                                    style="position:relative; height:58px; display:flex; align-items:flex-start; justify-content:center; margin-top:-5px; opacity:0; pointer-events:none; transition:opacity 0.3s;">
+                                    style="position:relative; height:58px; display:flex; align-items:flex-start; justify-content:center; margin-top:-5px; opacity:0; pointer-events:none; transition:opacity 0.3s; z-index:3;">
                                     <span id="fingerPointerStep3Balls"
                                         style="font-size:36px; line-height:1; transition:transform 0.4s cubic-bezier(0.23,1,0.32,1); position:absolute; top:5px; left:50%; transform:translateX(-50%);">👆</span>
                                 </div>
-                                <!-- Step 3 Footer (Text removed as requested, IDs preserved for JS stability) -->
                                 <div class="result-footer" style="display:none;">
                                     <span id="step3FixedCount">0</span>
                                     <span id="step3AiCount">0</span>
@@ -6909,13 +6922,32 @@
 
                 const gaugeMarker = document.getElementById('gaugeCurrentSum');
                 const gaugeText = document.getElementById('gaugeSumValue');
+                const goldenHitText = document.getElementById('goldenZoneHitText');
+
+                let isGoldenZone = false;
 
                 if (gaugeMarker && gaugeText) {
                     // 0~255 범위를 %로 환산 (21~255 가능)
                     const percent = Math.min(100, Math.max(0, (sum / 255) * 100));
                     gaugeMarker.style.left = `${percent}%`;
                     gaugeText.innerText = `TOTAL SUM: ${sum}`;
-                    gaugeText.style.color = (sum >= 100 && sum <= 170) ? '#fbbf24' : '#60a5fa';
+
+                    if (sum >= 100 && sum <= 170) {
+                        gaugeText.style.color = '#fbbf24';
+                        isGoldenZone = true;
+                        if (goldenHitText) goldenHitText.classList.add('active');
+                    } else {
+                        gaugeText.style.color = '#60a5fa';
+                        if (goldenHitText) goldenHitText.classList.remove('active');
+                    }
+                }
+
+                // 기운이 아래로 흐르는 빔 애니메이션 트리거
+                const energyBeam = document.getElementById('step3EnergyBeam');
+                if (energyBeam) {
+                    energyBeam.classList.remove('pulse');
+                    void energyBeam.offsetWidth; // trigger reflow
+                    energyBeam.classList.add('pulse');
                 }
 
                 // 3. 숫자 공(Ball) 로테이팅 연출 (Corrected ID: step3BallsNew)
@@ -6927,7 +6959,10 @@
                     } else {
                         recommended.forEach((n, i) => {
                             const ball = document.createElement('div');
-                            ball.className = 'rotating-ball';
+                            ball.className = 'rotating-ball premium-aura';
+                            if (isGoldenZone) {
+                                ball.classList.add('glow-active');
+                            }
                             ball.innerText = n;
 
                             // 기존 선택 상태 복원 (Number 타입 비교) - 방어적 체크 포함
