--- a/index.html
+++ b/index.html
@@ -6650,7 +6650,7 @@
                 prevBtn.style.visibility = 'visible';
 
                 // Toggle Dark Mode Override for Step 3
-                const naviModalContent = document.querySelector('.navi-modal-content');
+                const naviModalContent = document.querySelector('#naviModal .admin-modal-content');
                 if (currentNaviStep === 3) {
                     document.body.classList.add('step3-dark-override');
                     if (naviModalContent) naviModalContent.classList.add('step3-dark-override');
@@ -6808,7 +6808,7 @@
                 document.getElementById('finalNaviResult').style.display = 'none';
                 currentNaviStep = 1;
                 document.body.classList.remove('step3-dark-override');
-                const naviModalContent = document.querySelector('.navi-modal-content');
+                const naviModalContent = document.querySelector('#naviModal .admin-modal-content');
                 if (naviModalContent) naviModalContent.classList.remove('step3-dark-override');
             }
 
@@ -8512,7 +8512,7 @@
                 transition: background-color 0.5s ease;
             }
 
-            .navi-modal-content.step3-dark-override {
+            .admin-modal-content.step3-dark-override {
                 background: linear-gradient(180deg, #050814 0%, #0f172a 100%) !important;
                 border: 1px solid rgba(59, 130, 246, 0.4) !important;
                 box-shadow: 0 0 50px rgba(0, 0, 0, 0.9), inset 0 0 30px rgba(59, 130, 246, 0.15) !important;
@@ -8521,9 +8521,9 @@
             .futuristic-card {
                 background: rgba(15, 23, 42, 0.85);
                 border: 1px solid rgba(148, 163, 184, 0.15);
-                border-radius: 24px;
-                padding: 24px 20px;
-                box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6), inset 0 1px 1px rgba(255, 255, 255, 0.08);
+                border-radius: 20px;
+                padding: 15px 15px;
+                box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6), inset 0 1px 1px rgba(255, 255, 255, 0.08);
                 backdrop-filter: blur(16px);
                 -webkit-backdrop-filter: blur(16px);
                 position: relative;
@@ -8543,20 +8543,20 @@
             /* Energy Funnel */
             .energy-funnel-container {
                 width: 100%;
-                height: 80px;
+                height: 50px;
                 display: flex;
                 justify-content: center;
                 position: relative;
                 z-index: 1;
-                margin: -15px 0;
+                margin: -5px 0;
                 pointer-events: none;
             }
 
             .energy-funnel {
-                width: 80px;
+                width: 60px;
                 height: 100%;
                 background: linear-gradient(180deg, rgba(96, 165, 250, 0.15) 0%, rgba(167, 139, 250, 0.7) 100%);
-                clip-path: polygon(0 0, 100% 0, 65% 100%, 35% 100%);
+                clip-path: polygon(0 0, 100% 0, 60% 100%, 40% 100%);
                 opacity: 0.6;
                 transition: opacity 0.3s ease;
                 box-shadow: 0 0 25px rgba(167, 139, 250, 0.5);
