--- a/index.html
+++ b/index.html
@@ -6027,10 +6027,13 @@
 
                         <!-- Step 3: Balance (KINOV AI Precision) -->
                         <div class="navi-step-container" id="naviStep3">
-                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:23.4px; opacity:0.8;"><span
-                                    style="color:var(--secondary);">Step 3.</span> 조화의 저울(홀수 : 짝수)</h2>
+                            <h2
+                                style="margin-top: 15px; margin-bottom: 5px; font-size:23.4px; opacity:0.9; color: #f8fafc;">
+                                <span style="color: #60a5fa; text-shadow: 0 0 10px rgba(96,165,250,0.5);">Step 3.</span>
+                                조화의 저울(홀수 : 짝수)
+                            </h2>
                             <div class="battle-theme-text" id="step3Subtitle"
-                                style="text-align: center; font-size:18px; margin: 19px 0 15px 0;">
+                                style="text-align: center; font-size:18px; margin: 15px 0 15px 0; color: #cbd5e1;">
                                 확률의 균형을 설계하라.
                             </div>
 
@@ -6057,7 +6060,7 @@
 
                                     <!-- 손가락 포인터 (슬라이더 연동) -->
                                     <div id="fingerPointerWrapStep3"
-                                        style="position:relative; height:35px; width:100%; margin-top:-4px; z-index:2;">
+                                        style="position:relative; height:35px; width:100%; margin-top:8px; z-index:2;">
                                         <span id="fingerPointerStep3"
                                             style="font-size:40px; line-height:1; transition:transform 0.3s cubic-bezier(0.23,1,0.32,1); position:absolute; top:0; left:0%; transform:translateX(calc(33.3% - 20px)); pointer-events:none;">👆</span>
                                     </div>
@@ -8527,7 +8530,7 @@
                 backdrop-filter: blur(16px);
                 -webkit-backdrop-filter: blur(16px);
                 position: relative;
-                overflow: hidden;
+                /* Removes overflow:hidden so the finger pointer can spill out */
             }
 
             .futuristic-card::before {
